--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,13 +1,4 @@
-
-.ujsi {
-    position: absolute;
-    width: 350px;
-    right: 0%;
-    bottom: 0%;
-    margin: 0;
-
-}
-
+/*footer exchange*/
 .exchange__footer {
     background-color: $red;
     display: flex;
@@ -34,5 +25,32 @@
             margin-bottom: 8%;
         }
     }
-
+}
+/*footer liquidity*/
+.liquidity__footer {
+    background-color: $yellow;
+    display: flex;
+    justify-content: space-between;
+    padding: 3%;
+    align-items: center;
+    &__a {
+        &__img {
+            width: 250px;
+        }
+    }
+    &__strategic {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-right: 11%;
+        &__img {
+            border-radius: 2rem;
+            width: 200px;
+        }
+        &__text {
+            font-size: 1.6rem;
+            color: white;
+            margin-bottom: 8%;
+        }
+    }
 }
