mas problemas con npm

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,10 +1,12 @@
 
 /*Views*/
+@import "./views/pool";
 @import "./views/liquidity";
 @import "./views/exchange";
 @import "./views/farms";
 @import "./views/home";
 @import "./views/nft";
+
 
 /*Partials*/
 @import "./partials/header";
