--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,6 +1,7 @@
 /*footer exchange*/
 .exchange__footer {
     background-color: $red;
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
     display: flex;
     justify-content: space-between;
     padding: 3%;
@@ -29,6 +30,7 @@
 /*footer liquidity*/
 .liquidity__footer {
     background-color: $yellow;
+   /* background-image: linear-gradient(180deg, rgb(255, 215, 0, 0.15), rgb(255, 215, 0));*/
     display: flex;
     justify-content: space-between;
     padding: 3%;
