--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,29 +1,25 @@
 @import "../misc/variables";
 
-/* Navbar Exchange*/
-.header__nav {
-    position: fixed;
-    width: 100%;
-}
-.exchange__nav {
-    background-color: $background-blanco;
+/*general*/
+
+.nav {
+    
     display: flex;
     border-bottom: $border-blanco solid 1px;
     justify-content: space-between;
     &__bar {
         display: flex;
-        &__hover:hover {
-            background-color: $hover-blanco;
-            border-radius: 1rem;
-            cursor: pointer;
-        }
         &__hover {
             padding: 12px;
+            &:hover {
+                background-color: $hover-blanco;
+                border-radius: 1rem;
+                cursor: pointer;
+            }
             &__link {
                 text-decoration: none;
                 color: black;
                 &__on {
-                    color: $red;
                     font-weight: bold;
                  }
             }
@@ -47,7 +43,6 @@
         }
         &__language{
             margin-top: 13px;
-            color: $red;
             margin-right: 15px;
             &:hover {
                 opacity: 0.5;
@@ -57,7 +52,6 @@
         }
         &__settings {
             margin-top: 13px;
-            color: $red;
             margin-right: 5px;
             &:hover {
                 opacity: 0.5;
@@ -68,7 +62,6 @@
         &__wallet {
             padding: 12px;
             &__button {
-                background-color: $red;
                 color: $border-blanco;
                 border: none;
                 border-radius: 2rem;
@@ -87,12 +80,11 @@ body header nav div div {
     margin-top: 2px;
     margin-bottom: 2px;
 }
-
 @font-face {
     font-family: pokemon;
     src: url(../letras/ketchum.otf);
 }
-.exchange__nav__bar__dropdown {
+.nav__bar__dropdown {
     display: none;
     position: absolute;
     width: 278px;
@@ -118,14 +110,13 @@ body header nav div div {
         }
     }
 } 
-.exchange__nav__bar__trade:hover .exchange__nav__bar__dropdown {
+.nav__bar__trade:hover .nav__bar__dropdown {
     display: block;
     background-color: #faf9fa;
 }
 .language__dropdown {
     display: none;
     position: absolute;
-    background-color: $background-blanco;
     padding: 1rem;
     left: 86%;
     border-radius: 0 0 0.5rem 0.5rem;
@@ -144,8 +135,7 @@ body header nav div div {
     background-color: #faf9fa;
 }
 /*SubNav*/
-.exchange__subnav {
-    background-color: $background-blanco;
+.subnav {
     display: flex;
     border-bottom: $border-blanco solid 1px;
     justify-content: center;
@@ -161,10 +151,6 @@ body header nav div div {
     &__link {
         text-decoration: none;
         color: black;
-        &__on {
-            border-bottom: solid 3px $red;
-            color: $red;
-        }
     }
 }
 /*Fin Navbar Exchange*/
@@ -175,10 +161,9 @@ body header nav div div {
     bottom: 0%;
     width: 100%;
 }
-.exchange__nav__mobile {
+.nav__mobile {
     display: flex;
     justify-content: space-around;
-    background-color: $background-blanco;
     &__container{
         display: flex;
         flex-direction: column;
@@ -188,9 +173,6 @@ body header nav div div {
         padding: 6px;
         &__text {
             font-size: 12px;
-        }
-        &__on {
-            color: $red;
         }
         &:hover {
             background-color: $hover-blanco;
@@ -203,19 +185,19 @@ body header nav div div {
 /*responsive Navbar*/
 @media only screen and (max-width: 1024px){
 
-    .exchange__nav__bar__logo {
+    .nav__bar__logo {
         margin-right: 0px;
     }
-    .exchange__nav__bar__logo__img {
+    .nav__bar__logo__img {
         height: 32px;
         margin-right: 0px;
     }
-    .exchange__nav__bar__logo__pokedex {
+    .nav__bar__logo__pokedex {
         display: none;
     }
     @media only screen and (max-width: 767px) {
 
-        .exchange__nav__bar__info , .exchange__nav__bar__trade , .exchange__nav__bar__nft{
+        .nav__bar__info , .nav__bar__trade , .nav__bar__nft{
             display: none;
         }
         .mobile {
@@ -242,508 +224,7 @@ body header nav div div {
 
 /*Fin responsive Navbar*/
 
-
-/* Navbar liquidty*/
-.header__nav {
-    position: fixed;
-    width: 100%;
-}
-.liquidity__nav {
-    background-color: $background-blanco;
-    display: flex;
-    border-bottom: $border-blanco solid 1px;
-    justify-content: space-between;
-    &__bar {
-        display: flex;
-        &__hover:hover {
-            background-color: $hover-blanco;
-            border-radius: 1rem;
-            cursor: pointer;
-        }
-        &__hover {
-            padding: 12px;
-            &__link {
-                text-decoration: none;
-                color: black;
-                &__on {
-                    color: $yellow;
-                    font-weight: bold;
-                 }
-            }
-        }
-        &__logo {
-            text-decoration: none;
-            color: black;
-            display: flex;
-            margin-left: 1rem;
-            margin-right: 2.5rem;
-            padding: 12px;
-            &__img {
-                height: 27px;
-                margin-right: 2px;
-            }
-            &__pokedex {
-                font-weight: bold;
-                font-size: 22px;
-                font-family: pokemon;
-            }
-        }
-        &__language{
-            margin-top: 13px;
-            color: $yellow;
-            margin-right: 15px;
-            &:hover {
-                opacity: 0.5;
-            transition: 0.3s;
-            cursor: pointer;
-            }
-        }
-        &__settings {
-            margin-top: 13px;
-            color: $yellow;
-            margin-right: 5px;
-            &:hover {
-                opacity: 0.5;
-            transition: 0.3s;
-            cursor: pointer;
-            }
-        }
-        &__wallet {
-            padding: 12px;
-            &__button {
-                background-color: $yellow;
-                color: $border-blanco;
-                border: none;
-                border-radius: 2rem;
-                width: 135px;
-                cursor: pointer;
-                &:hover {
-                    opacity: 0.5;
-                transition: 0.3s;
-                cursor: pointer;
-                }
-            }
-        }
-    }
-}
-body header nav div div {
-    margin-top: 2px;
-    margin-bottom: 2px;
-}
-
-@font-face {
-    font-family: pokemon;
-    src: url(../letras/ketchum.otf);
-}
-.liquidity__nav__bar__dropdown {
-    display: none;
-    position: absolute;
-    width: 278px;
-    border: #e7e3eb solid 1px;
-    color: black;
-    border-radius: 1rem;
-    &__link {
-        text-decoration: none;
-        color: black;
-    }
-    &__div__top {
-        padding: 10px;
-        &:hover {
-            background-color: $hover-blanco;
-            border-radius: 0.8rem 0.8rem 0 0;
-        }
-    }
-    &__div__bot {
-        padding: 10px;
-        &:hover {
-            background-color: $hover-blanco;
-            border-radius:  0 0 0.8rem 0.8rem;
-        }
-    }
-} 
-.liquidity__nav__bar__trade:hover .liquidity__nav__bar__dropdown {
-    display: block;
-    background-color: #faf9fa;
-}
-.language__dropdown {
-    display: none;
-    position: absolute;
-    background-color: $background-blanco;
-    padding: 1rem;
-    left: 86%;
-    border-radius: 0 0 0.5rem 0.5rem;
-    border: $border-blanco solid 1px;
-    &__text {
-        padding: 10px;
-        &:hover {
-            opacity: 0.5;
-            transition: 0.3s;
-            cursor: pointer;
-        }
-    }
-}
-.language:hover .language__dropdown {
-    display: block;
-    background-color: #faf9fa;
-}
-/*SubNav*/
-.liquidity__subnav {
-    background-color: $background-blanco;
-    display: flex;
-    border-bottom: $border-blanco solid 1px;
-    justify-content: center;
-    margin-top: 33px;
-    &__h2 {
-        padding: 12px 0px 3px 0px;
-        margin-left: 10px;
-        margin-right: 10px;
-        &:hover {
-            background-color: $hover-blanco;
-        }
-    }
-    &__link {
-        text-decoration: none;
-        color: black;
-        &__on {
-            border-bottom: solid 3px $yellow;
-            color: $yellow;
-        }
-    }
-}
+/*fin general*/
 
 
-.mobile {
-    display: none;
-    position: fixed;
-    bottom: 0%;
-    width: 100%;
-}
-.liquidity__nav__mobile {
-    display: flex;
-    justify-content: space-around;
-    background-color: $background-blanco;
-    &__container{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        color: black;
-        text-decoration: none;
-        padding: 6px;
-        &__text {
-            font-size: 12px;
-        }
-        &__on {
-            color: $yellow;
-        }
-        &:hover {
-            background-color: $hover-blanco;
-            border-radius: 1rem;
-        }
-    }
-}
-
-/*responsive Navbar*/
-@media only screen and (max-width: 1024px){
-
-    .liquidity__nav__bar__logo {
-        margin-right: 0px;
-    }
-    .liquidity__nav__bar__logo__img {
-        height: 32px;
-        margin-right: 0px;
-    }
-    .liquidity__nav__bar__logo__pokedex {
-        display: none;
-    }
-    @media only screen and (max-width: 767px) {
-
-        .liquidity__nav__bar__info , .liquidity__nav__bar__trade , .liquidity__nav__bar__nft{
-            display: none;
-        }
-        .mobile {
-            display: block;
-        }
-        .help__none {
-            display: none;
-        }
-        .liquidity__pikachu__trader {
-            display: flex;
-            justify-content: center;
-            &__img {
-                width: 40%;
-            }
-            &__globo {
-                text-align: center;
-                width: 110px;
-                margin-top: 40px;
-                &__img {
-                    width: 100%;
-                    margin-top: 4%;
-                    &:hover {
-                        cursor: pointer;
-                        opacity: 0.1;
-                        transition: 0.2s;
-                    }
-                }
-
-            }
-        }
-    }
-}
-/*Fin responsive Navbar*/
-
-/*Fin Navbar Liquidity*/
-
-
-
-/*Nabar Farm*/
-
-.header__nav {
-    position: fixed;
-    width: 100%;
-}
-.farm__nav {
-    background-color: $background-blanco;
-    display: flex;
-    border-bottom: $border-blanco solid 1px;
-    justify-content: space-between;
-    &__bar {
-        display: flex;
-        &__hover:hover {
-            background-color: $hover-blanco;
-            border-radius: 1rem;
-            cursor: pointer;
-        }
-        &__hover {
-            padding: 12px;
-            &__link {
-                text-decoration: none;
-                color: black;
-                &__on {
-                    color: $yellow;
-                    font-weight: bold;
-                 }
-            }
-        }
-        &__logo {
-            text-decoration: none;
-            color: black;
-            display: flex;
-            margin-left: 1rem;
-            margin-right: 2.5rem;
-            padding: 12px;
-            &__img {
-                height: 27px;
-                margin-right: 2px;
-            }
-            &__pokedex {
-                font-weight: bold;
-                font-size: 22px;
-                font-family: pokemon;
-            }
-        }
-        &__language{
-            margin-top: 13px;
-            color: $yellow;
-            margin-right: 15px;
-            &:hover {
-                opacity: 0.5;
-            transition: 0.3s;
-            cursor: pointer;
-            }
-        }
-        &__settings {
-            margin-top: 13px;
-            color: $yellow;
-            margin-right: 5px;
-            &:hover {
-                opacity: 0.5;
-            transition: 0.3s;
-            cursor: pointer;
-            }
-        }
-        &__wallet {
-            padding: 12px;
-            &__button {
-                background-color: $yellow;
-                color: $border-blanco;
-                border: none;
-                border-radius: 2rem;
-                width: 135px;
-                cursor: pointer;
-                &:hover {
-                    opacity: 0.5;
-                transition: 0.3s;
-                cursor: pointer;
-                }
-            }
-        }
-    }
-}
-body header nav div div {
-    margin-top: 2px;
-    margin-bottom: 2px;
-}
-
-@font-face {
-    font-family: pokemon;
-    src: url(../letras/ketchum.otf);
-}
-.farm__nav__bar__dropdown {
-    display: none;
-    position: absolute;
-    width: 278px;
-    border: #e7e3eb solid 1px;
-    color: black;
-    border-radius: 1rem;
-    &__link {
-        text-decoration: none;
-        color: black;
-    }
-    &__div__top {
-        padding: 10px;
-        &:hover {
-            background-color: $hover-blanco;
-            border-radius: 0.8rem 0.8rem 0 0;
-        }
-    }
-    &__div__bot {
-        padding: 10px;
-        &:hover {
-            background-color: $hover-blanco;
-            border-radius:  0 0 0.8rem 0.8rem;
-        }
-    }
-} 
-.farm__nav__bar__trade:hover .farm__nav__bar__dropdown {
-    display: block;
-    background-color: #faf9fa;
-}
-.language__dropdown {
-    display: none;
-    position: absolute;
-    background-color: $background-blanco;
-    padding: 1rem;
-    left: 86%;
-    border-radius: 0 0 0.5rem 0.5rem;
-    border: $border-blanco solid 1px;
-    &__text {
-        padding: 10px;
-        &:hover {
-            opacity: 0.5;
-            transition: 0.3s;
-            cursor: pointer;
-        }
-    }
-}
-.language:hover .language__dropdown {
-    display: block;
-    background-color: #faf9fa;
-}
-/*SubNav*/
-.farm__subnav {
-    background-color: $background-blanco;
-    display: flex;
-    border-bottom: $border-blanco solid 1px;
-    justify-content: center;
-    margin-top: 33px;
-    &__h2 {
-        padding: 12px 0px 3px 0px;
-        margin-left: 10px;
-        margin-right: 10px;
-        &:hover {
-            background-color: $hover-blanco;
-        }
-    }
-    &__link {
-        text-decoration: none;
-        color: black;
-        &__on {
-            border-bottom: solid 3px $yellow;
-            color: $yellow;
-        }
-    }
-}
-
-
-.mobile {
-    display: none;
-    position: fixed;
-    bottom: 0%;
-    width: 100%;
-}
-.farm__nav__mobile {
-    display: flex;
-    justify-content: space-around;
-    background-color: $background-blanco;
-    &__container{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        color: black;
-        text-decoration: none;
-        padding: 6px;
-        &__text {
-            font-size: 12px;
-        }
-        &__on {
-            color: $yellow;
-        }
-        &:hover {
-            background-color: $hover-blanco;
-            border-radius: 1rem;
-        }
-    }
-}
-
-/*responsive Navbar*/
-@media only screen and (max-width: 1024px){
-
-    .farm__nav__bar__logo {
-        margin-right: 0px;
-    }
-    .farm__nav__bar__logo__img {
-        height: 32px;
-        margin-right: 0px;
-    }
-    .farm__nav__bar__logo__pokedex {
-        display: none;
-    }
-    @media only screen and (max-width: 767px) {
-
-        .farm__nav__bar__info , .farm__nav__bar__trade , .farm__nav__bar__nft{
-            display: none;
-        }
-        .mobile {
-            display: block;
-        }
-        .help__none {
-            display: none;
-        }
-        .farm__pikachu__trader {
-            display: flex;
-            justify-content: center;
-            &__img {
-                width: 40%;
-            }
-            &__globo {
-                text-align: center;
-                width: 110px;
-                margin-top: 40px;
-                &__img {
-                    width: 100%;
-                    margin-top: 4%;
-                    &:hover {
-                        cursor: pointer;
-                        opacity: 0.1;
-                        transition: 0.2s;
-                    }
-                }
-
-            }
-        }
-    }
-}
-
-/*Nabar Farm*/
 
